// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blocksEditor/blocks/text should match Display snapshot 1`] = `
<div>
  <div
    class="octo-editor-preview"
  >
    <p>
      test-value
    </p>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/text should match Input snapshot 1`] = `
<div>
  <div
    class="TextContent"
    data-testid="text"
  >
    <div
      class="MarkdownEditor octo-editor  active"
    >
      <div
        class="TiptapEditor"
      >
        <div>
          <div
            class="tiptap ProseMirror TiptapEditorInput"
            contenteditable="true"
            tabindex="0"
            translate="no"
          >
            <p>
              test-value
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
